--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -8,6 +8,7 @@
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>mosaic-examples</artifactId>
+	<name>mosaic-examples</name>
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
