--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>mosaic-driver</artifactId>
+	<name>mosaic-driver</name>
 	<dependencies>
                 <dependency>
                         <groupId>junit</groupId>
