--- a/examples/interoperability/pom.xml
+++ b/examples/interoperability/pom.xml
@@ -11,6 +11,7 @@
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>interoperability-examples</artifactId>
+	<name>interoperability-examples</name>
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
