--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -10,6 +10,7 @@
                 <version>0.4-SNAPSHOT</version>
         </parent>
 	<artifactId>components-parent</artifactId>
+	<name>components-parent</name>
 	<packaging>pom</packaging>
 	<modules>
 		<module>components-container</module>
