--- a/examples/interoperability/pom.xml
+++ b/examples/interoperability/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>java-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>interoperability-examples</artifactId>
