--- a/interoperability/pom.xml
+++ b/interoperability/pom.xml
@@ -7,7 +7,7 @@
         <parent>
                 <artifactId>java-parent</artifactId>
                 <groupId>eu.mosaic_cloud</groupId>
-                <version>0.4-SNAPSHOT</version>
+                <version>0.4.1.mosaic_dev-SNAPSHOT</version>
         </parent>
 	<artifactId>interoperability-parent</artifactId>
 	<name>interoperability-parent</name>
