--- a/platform/mosaic-core/pom.xml
+++ b/platform/mosaic-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>java-parent</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<name>mosaic-core</name>
