--- a/tools/tools-callbacks/pom.xml
+++ b/tools/tools-callbacks/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>tools-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 	</parent>
 	<artifactId>tools-callbacks</artifactId>
 	<dependencies>
