--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -1,35 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+
+<project
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<artifactId>java-parent</artifactId>
-		<groupId>eu.mosaic_cloud</groupId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 	</parent>
-	<artifactId>mosaic-cloudlet</artifactId>
-	<name>mosaic-cloudlet</name>
+	
+	<artifactId>cloudlets</artifactId>
+	<name>mosaic-cloudlets</name>
+	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-core</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>platform-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-interop</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>platform-interop</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-connector</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>connectors</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>components-launcher</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -57,4 +64,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
