--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -1,55 +1,58 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+
+<project
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<artifactId>java-parent</artifactId>
-		<groupId>eu.mosaic_cloud</groupId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 	</parent>
-	<artifactId>mosaic-driver</artifactId>
-	<name>mosaic-driver</name>
+	
+	<artifactId>drivers</artifactId>
+	<name>mosaic-drivers</name>
+	
 	<dependencies>
-                <dependency>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                        <version>4.8.2</version>
-                        <scope>test</scope>
-                </dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-tools</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>components-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-core</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>components-container</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-core</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>components-launcher</artifactId>
 			<version>${project.version}</version>
-			<classifier>tests</classifier>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>mosaic-interop</artifactId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>platform-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>platform-interop</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -72,17 +75,8 @@
 			<artifactId>riak-client</artifactId>
 			<version>0.14.1</version>
 		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>components-container</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>components-launcher</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -110,4 +104,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
