--- a/examples/simple-components/pom.xml
+++ b/examples/simple-components/pom.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project
-		xmlns="http://maven.apache.org/POM/4.0.0"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<groupId>eu.mosaic_cloud</groupId>
-		<artifactId>java-parent</artifactId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
+	
 	<artifactId>components-examples</artifactId>
-	<name>components-examples</name>
+	<name>mosaic-components-examples</name>
+	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>components-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>components-launcher</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>components-tools</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>components-container</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>components-launcher</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>components-tools</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-classpath-exporter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -44,6 +47,7 @@
 			<version>4.1</version>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -73,4 +77,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
