--- a/interoperability/interoperability-zeromq/pom.xml
+++ b/interoperability/interoperability-zeromq/pom.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project
-		xmlns="http://maven.apache.org/POM/4.0.0"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<groupId>eu.mosaic_cloud</groupId>
-		<artifactId>interoperability-parent</artifactId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
+	
 	<artifactId>interoperability-zeromq</artifactId>
+	<name>mosaic-interoperability-zeromq</name>
+	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-tools</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-exceptions</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.6.2</version>
-		</dependency>
 	</dependencies>
+	
 </project>
