--- a/platform/mosaic-interop/pom.xml
+++ b/platform/mosaic-interop/pom.xml
@@ -1,27 +1,33 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+
+<project
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<artifactId>java-parent</artifactId>
-		<groupId>eu.mosaic_cloud</groupId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
-	<artifactId>mosaic-interop</artifactId>
-	<name>mosaic-interop</name>
+	
+	<artifactId>platform-interop</artifactId>
+	<name>mosaic-platform-interop</name>
+	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-tools</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>interoperability-zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -31,4 +37,5 @@
 			<version>2.4.1</version>
 		</dependency>
 	</dependencies>
+	
 </project>
