--- a/tools/tools-classpath-exporter/pom.xml
+++ b/tools/tools-classpath-exporter/pom.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project
-		xmlns="http://maven.apache.org/POM/4.0.0"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<groupId>eu.mosaic_cloud</groupId>
-		<artifactId>tools-parent</artifactId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
+	
 	<artifactId>tools-classpath-exporter</artifactId>
+	<name>mosaic-tools-classpath-exporter</name>
+	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-exceptions</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-transcript</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -32,4 +37,5 @@
 			<version>6.1.26</version>
 		</dependency>
 	</dependencies>
+	
 </project>
