--- a/tools/tools-exceptions/pom.xml
+++ b/tools/tools-exceptions/pom.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project
-		xmlns="http://maven.apache.org/POM/4.0.0"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
-		<groupId>eu.mosaic_cloud</groupId>
-		<artifactId>tools-parent</artifactId>
+		<groupId>eu.mosaic_cloud.platform</groupId>
+		<artifactId>platform-parent</artifactId>
 		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
+	
 	<artifactId>tools-exceptions</artifactId>
+	<name>mosaic-tools-exceptions</name>
+	
 	<dependencies>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -22,4 +27,5 @@
 			<version>1.6.2</version>
 		</dependency>
 	</dependencies>
+	
 </project>
