--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<projectNameTemplate>${project.name}</projectNameTemplate>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
