--- a/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
@@ -17,8 +17,8 @@
 # limitations under the License.
 # #L%
 ###
-cloudlet.main_class=mosaic.cloudlet.tests.PingCloudlet$LifeCycleHandler
-cloudlet.state_class=mosaic.cloudlet.tests.PingCloudlet$PingCloudletState
+cloudlet.main_class=eu.mosaic_cloud.cloudlet.tests.PingCloudlet$LifeCycleHandler
+cloudlet.state_class=eu.mosaic_cloud.cloudlet.tests.PingCloudlet$PingCloudletState
 cloudlet.resource_file=ping-cloudlet.properties
 
 queue.consumer.amqp.exchange=pingpong-exchange
