--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -17,8 +17,8 @@
 # limitations under the License.
 # #L%
 ###
-cloudlet.main_class=mosaic.cloudlet.tests.PongCloudlet$LifeCycleHandler
-cloudlet.state_class=mosaic.cloudlet.tests.PongCloudlet$PongCloudletState
+cloudlet.main_class=eu.mosaic_cloud.cloudlet.tests.PongCloudlet$LifeCycleHandler
+cloudlet.state_class=eu.mosaic_cloud.cloudlet.tests.PongCloudlet$PongCloudletState
 cloudlet.resource_file=pong-cloudlet.properties
 
 queue.consumer.amqp.exchange=pingpong-exchange
