--- a/pom.xml
+++ b/pom.xml
@@ -1,69 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>eu.mosaic_cloud.platform</groupId>
-	<artifactId>platform-parent</artifactId>
+	
+	<groupId>eu.mosaic_cloud</groupId>
+	<artifactId>parent</artifactId>
 	<version>0.4.1.mosaic_dev-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
-	<name>mosaic-platform-parent</name>
+	
+	<name>mosaic-parent</name>
 	<url>http://developers.mosaic-cloud.eu/</url>
 	<inceptionYear>2010</inceptionYear>
-
+	
 	<modules>
-		<module>cloudlets</module>
-		<module>components-container</module>
-		<module>components-core</module>
-		<module>components-launcher</module>
-		<module>components-tools</module>
-		<module>connectors</module>
-		<module>drivers</module>
-		<module>interoperability-core</module>
-		<module>interoperability-tools</module>
-		<module>interoperability-zeromq</module>
-		<module>jetty-httpg-connector</module>
-		<module>platform-core</module>
-		<module>platform-interop</module>
-		<module>tools-callbacks</module>
-		<module>tools-classpath-exporter</module>
-		<module>tools-exceptions</module>
-		<module>tools-json</module>
-		<module>tools-miscellaneous</module>
-		<module>tools-transcript</module>
-		<module>zeromq</module>
-		<module>examples/interoperability</module>
-		<module>examples/simple-cloudlets</module>
-		<module>examples/simple-components</module>
+		<module>./platform-parent</module>
 	</modules>
-
-	<dependencies>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>10.0</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
+	
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
@@ -84,7 +40,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>1.0-beta-3</version>
+				<version>1.0</version>
 				<executions>
 					<execution>
 						<id>download-licenses</id>
@@ -102,20 +58,9 @@
 					<projectNameTemplate>${project.name}</projectNameTemplate>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-					<executions>
-						<execution>
-							<goals>
-								<goal>test-jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 		</plugins>
 	</build>
-
+	
 	<repositories>
 		<repository>
 			<id>developers.mosaic-cloud.eu</id>
@@ -136,12 +81,12 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
+	
 	<organization>
 		<name>eAustria Research Institute, Timisoara, Romania</name>
 		<url>http://www.ieat.ro/</url>
 	</organization>
-
+	
 	<developers>
 		<developer>
 			<id>georgiana</id>
@@ -180,12 +125,12 @@
 			<timezone>+3</timezone>
 		</developer>
 	</developers>
-
+	
 	<scm>
 		<connection>scm:hg:https://bitbucket.org/mosaic/mosaic-java-platform</connection>
 		<developerConnection>scm:hg:file://${basedir}</developerConnection>
 	</scm>
-
+	
 	<distributionManagement>
 		<site>
 			<id>builder.mosaic.ieat.ro</id>
@@ -203,17 +148,17 @@
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
-
+	
 	<issueManagement>
 		<system>jira</system>
 		<url>http://developers.mosaic-cloud.eu/jira</url>
 	</issueManagement>
-
+	
 	<ciManagement>
 		<system>bamboo</system>
 		<url>http://developers.mosaic-cloud.eu/bamboo</url>
 	</ciManagement>
-
+	
 	<reporting>
 		<plugins>
 			<plugin>
@@ -228,10 +173,10 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<license.licenseName>apache_v2</license.licenseName>
 	</properties>
-
+	
 </project>
