--- a/platform-parent/pom.xml
+++ b/platform-parent/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.4.1.mosaic_dev-SNAPSHOT</version>
+		<version>0.4.1_mosaic_dev-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
