--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.4.1.mosaic_dev-SNAPSHOT</version>
+	<version>0.4.1_mosaic_dev-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>mosaic-parent</name>
