Refactor versions into parent Maven POM

--- a/components-container/pom.xml
+++ b/components-container/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>0.9.29</version>
+			<version>${versions.dependencies.logback}</version>
 		</dependency>
 	</dependencies>
 	
@@ -48,7 +48,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
+				<version>${versions.plugins.assembly}</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
