--- a/platform-core/pom.xml
+++ b/platform-core/pom.xml
@@ -29,12 +29,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>0.9.29</version>
+			<version>${versions.dependencies.logback}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20090211</version>
+			<version>${versions.dependencies.json}</version>
 		</dependency>
 	</dependencies>
 	
