--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -66,22 +66,22 @@
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>2.6.1</version>
+			<version>${versions.dependencies.amqp}</version>
 		</dependency>
 		<dependency>
 			<groupId>spy</groupId>
 			<artifactId>spymemcached</artifactId>
-			<version>2.7</version>
+			<version>${versions.dependencies.spy}</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.0.0</version>
+			<version>${versions.dependencies.redis}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.basho.riak</groupId>
 			<artifactId>riak-client</artifactId>
-			<version>0.14.1</version>
+			<version>${versions.dependencies.riak}</version>
 		</dependency>
 	</dependencies>
 	
@@ -90,7 +90,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
+				<version>${versions.plugins.assembly}</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
