--- a/examples/interoperability/pom.xml
+++ b/examples/interoperability/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.1</version>
+			<version>${versions.dependencies.junit}</version>
 		</dependency>
 	</dependencies>
 	
