--- a/jetty-httpg-connector/pom.xml
+++ b/jetty-httpg-connector/pom.xml
@@ -18,48 +18,53 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>${versions.dependencies.jetty}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-deploy</artifactId>
-			<version>8.0.0.M3</version>
+			<version>${versions.dependencies.jetty}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlets</artifactId>
-			<version>8.0.0.M3</version>
+			<version>${versions.dependencies.jetty}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<version>${versions.dependencies.servlet}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
+			<version>${versions.dependencies.jsp-api}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jsp-2.1-glassfish</artifactId>
-			<version>2.1.v20100127</version>
+			<version>${versions.dependencies.jsp-glassfish}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-jsp-2.1</artifactId>
-			<version>7.4.2.v20110526</version>
+			<version>${versions.dependencies.jsp-jetty}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>2.2.0</version>
+			<version>${versions.dependencies.amqp}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20090211</version>
+			<version>${versions.dependencies.json}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
+			<version>${versions.dependencies.commons-cli}</version>
 		</dependency>
 	</dependencies>
 	
