--- a/platform-parent/pom.xml
+++ b/platform-parent/pom.xml
@@ -44,12 +44,12 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>10.0</version>
+			<version>${versions.dependencies.guava}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>${versions.dependencies.junit}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -59,16 +59,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>${versions.plugins.compiler}</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${versions.java.compiler}</source>
+					<target>${versions.java.compiler}</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>${versions.plugins.jar}</version>
 				<executions>
 					<execution>
 						<goals>
