--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,33 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>${versions.plugins.eclipse}</version>
+				<configuration>
+					<projectNameTemplate>${project.name}</projectNameTemplate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
+				<version>${versions.plugins.site}</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
 						<artifactId>wagon-ssh</artifactId>
-						<version>1.0</version>
+						<version>${versions.plugins.wagon}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3.3</version>
+				<version>${versions.plugins.findbugs}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>1.0</version>
+				<version>${versions.plugins.license}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -54,16 +62,73 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<projectNameTemplate>${project.name}</projectNameTemplate>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${versions.plugins.javadoc}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>${versions.plugins.project-info-reports}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${versions.plugins.dependency}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${versions.plugins.findbugs}</version>
+			</plugin>
+		</plugins>
+	</reporting>
+	
+	<properties>
+		
+		<versions.dependencies.amqp>2.7.1</versions.dependencies.amqp>
+		<versions.dependencies.commons-cli>1.2</versions.dependencies.commons-cli>
+		<versions.dependencies.guava>11.0</versions.dependencies.guava>
+		<versions.dependencies.jackson>1.9.3</versions.dependencies.jackson>
+		<versions.dependencies.jetty>8.0.0.M3</versions.dependencies.jetty> <!-- TO UPGRADE -->
+		<versions.dependencies.json>20090211</versions.dependencies.json>
+		<versions.dependencies.json-smart>1.0.9</versions.dependencies.json-smart>
+		<versions.dependencies.jsp-api>2.1</versions.dependencies.jsp-api> <!-- TO UPGRADE -->
+		<versions.dependencies.jsp-glassfish>2.1.v20100127</versions.dependencies.jsp-glassfish> <!-- TO UPGRADE -->
+		<versions.dependencies.jsp-jetty>7.4.2.v20110526</versions.dependencies.jsp-jetty> <!-- TO UPGRADE -->
+		<versions.dependencies.junit>4.10</versions.dependencies.junit>
+		<versions.dependencies.logback>1.0.0</versions.dependencies.logback>
+		<versions.dependencies.protobuf>2.4.1</versions.dependencies.protobuf>
+		<versions.dependencies.redis>2.0.0</versions.dependencies.redis>
+		<versions.dependencies.riak>0.14.1</versions.dependencies.riak> <!-- TO UPGRADE -->
+		<versions.dependencies.servlet>2.5</versions.dependencies.servlet> <!-- TO UPGRADE -->
+		<versions.dependencies.slf4j>1.6.4</versions.dependencies.slf4j>
+		<versions.dependencies.spy>2.7.3</versions.dependencies.spy>
+		
+		<versions.plugins.assembly>2.2.2</versions.plugins.assembly>
+		<versions.plugins.compiler>2.3.2</versions.plugins.compiler>
+		<versions.plugins.dependency>2.4</versions.plugins.dependency>
+		<versions.plugins.eclipse>2.8</versions.plugins.eclipse>
+		<versions.plugins.findbugs>2.3.3</versions.plugins.findbugs>
+		<versions.plugins.jar>2.3.2</versions.plugins.jar>
+		<versions.plugins.javadoc>2.8</versions.plugins.javadoc>
+		<versions.plugins.license>1.0</versions.plugins.license>
+		<versions.plugins.project-info-reports>2.4</versions.plugins.project-info-reports>
+		<versions.plugins.site>3.0</versions.plugins.site>
+		<versions.plugins.wagon>1.0</versions.plugins.wagon>
+		
+		<versions.java.compiler>1.6</versions.java.compiler>
+		
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<license.licenseName>apache_v2</license.licenseName>
+		
+	</properties>
 	
 	<repositories>
 		<repository>
@@ -86,8 +151,13 @@
 		</repository>
 	</repositories>
 	
+	<scm>
+		<connection>scm:hg:https://bitbucket.org/mosaic/mosaic-java-platform</connection>
+		<developerConnection>scm:hg:ssh://hg@bitbucket.org/mosaic/mosaic-java-platform</developerConnection>
+	</scm>
+	
 	<organization>
-		<name>eAustria Research Institute (Timisoara, Romania)</name>
+		<name>Institute e-Austria Timisoara (Romania)</name>
 		<url>http://www.ieat.ro/</url>
 	</organization>
 	
@@ -96,7 +166,7 @@
 			<id>georgiana</id>
 			<name>Georgiana Macariu</name>
 			<email>georgiana@ieat.ro</email>
-			<organization>eAustria Research Institute (Timisoara, Romania)</organization>
+			<organization>Institute e-Austria Timisoara (Romania)</organization>
 			<organizationUrl>http://www.ieat.ro/</organizationUrl>
 			<roles>
 				<role>developer</role>
@@ -108,7 +178,7 @@
 			<id>ccraciun</id>
 			<name>Ciprian Craciun</name>
 			<email>ccraciun@ieat.ro</email>
-			<organization>eAustria Research Institute (Timisoara, Romania)</organization>
+			<organization>Institute e-Austria Timisoara (Romania)</organization>
 			<organizationUrl>http://www.ieat.ro/</organizationUrl>
 			<roles>
 				<role>developer</role>
@@ -120,7 +190,7 @@
 			<id>marian</id>
 			<name>Marian Neagul</name>
 			<email>marian@ieat.ro</email>
-			<organization>eAustria Research Institute (Timisoara, Romania)</organization>
+			<organization>Institute e-Austria Timisoara (Romania)</organization>
 			<organizationUrl>http://www.ieat.ro/</organizationUrl>
 			<roles>
 				<role>developer</role>
@@ -129,11 +199,6 @@
 			<timezone>+3</timezone>
 		</developer>
 	</developers>
-	
-	<scm>
-		<connection>scm:hg:https://bitbucket.org/mosaic/mosaic-java-platform</connection>
-		<developerConnection>scm:hg:file://${basedir}</developerConnection>
-	</scm>
 	
 	<distributionManagement>
 		<site>
@@ -162,25 +227,5 @@
 		<system>bamboo</system>
 		<url>http://developers.mosaic-cloud.eu/bamboo</url>
 	</ciManagement>
-	
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3.3</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-			</plugin>
-		</plugins>
-	</reporting>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<license.licenseName>apache_v2</license.licenseName>
-	</properties>
 	
 </project>
