--- a/tools-json/pom.xml
+++ b/tools-json/pom.xml
@@ -24,12 +24,12 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
-			<version>1.0.6.3</version>
+			<version>${versions.dependencies.json-smart}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.8.1</version>
+			<version>${versions.dependencies.jackson}</version>
 		</dependency>
 	</dependencies>
 	
