--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -66,4 +66,8 @@
 		</plugins>
 	</build>
 	
+	<properties>
+		<_maven_pom_package>mosaic-components-java-cloudlet-container</_maven_pom_package>
+	</properties>
+	
 </project>
