--- a/components-container/pom.xml
+++ b/components-container/pom.xml
@@ -71,4 +71,8 @@
 		</plugins>
 	</build>
 	
+	<properties>
+		<_maven_pom_package>mosaic-components-java-container</_maven_pom_package>
+	</properties>
+	
 </project>
