--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -113,4 +113,8 @@
 		</plugins>
 	</build>
 	
+	<properties>
+		<_maven_pom_package>mosaic-components-java-drivers</_maven_pom_package>
+	</properties>
+	
 </project>
