--- a/examples/realtime-feeds-indexer/pom.xml
+++ b/examples/realtime-feeds-indexer/pom.xml
@@ -67,4 +67,8 @@
 		</plugins>
 	</build>
 	
+	<properties>
+		<_maven_pom_package>mosaic-examples-realtime-feeds-java</_maven_pom_package>
+	</properties>
+	
 </project>
